# it_center

./: .env  Cargo.toml  docker-compose.yml
migrations/2023-07-16-210901_create_user/: up.sql
migrations/2023-07-16-212001_create_messages/: up.sql
src/: main.rs  schema.rs
src/authentication/: mod.rs  user.rs
src/messages/: message.rs  mod.rs  recipient.rs  sender.rs
